[gd_scene load_steps=2 format=2]

[ext_resource path="res://zones_boxes/hurtbox.gd" type="Script" id=1]

[node name="hurtbox" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]

[node name="Timer" type="Timer" parent="."]
[connection signal="invincibility_ended" from="." to="." method="_on_hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="." to="." method="_on_hurtbox_invincibility_started"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
